[tool.poetry]
name = "double_side_pdf_converter"
version = "0.1.0"
description = "Reorganizes a PDF scanned one side at a time to double sided."
authors = ["Christopher Kumm <chrislkumm@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pypdf = "^3.2.0"

[tool.poetry.dev-dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
